Update default.html for google search console verification

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,6 +9,8 @@ layout: compress
   <head>
     {% include head.html %}
     {% include head/custom.html %}
+    <!-- Google Search Console meta tag -->
+    <meta name="google-site-verification" content="YOUR_VERIFICATION_CODE">
   </head>
 
   <body>
