--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@ layout: compress
     {% include head.html %}
     {% include head/custom.html %}
     <!-- Google Search Console meta tag -->
-    <meta name="google-site-verification" content="YOUR_VERIFICATION_CODE">
+    <meta name="google-site-verification" content="qYlpoyCkQOoF_77CkIJh51D0Jcrvgz2DU3V9ijlPeTw">
   </head>
 
   <body>
